fontconfig: add zh-Han{s,t} order

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -39,6 +39,72 @@
       <string>Noto Sans CJK SC</string>
     </edit>
   </match>
+  <!-- "lang=zh-Hans" or "lang=zh-Hans-*" -->
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>zh-Hans</string>
+    </test>
+    <edit name="family" mode="append" binding="strong">
+      <string>Roboto</string>
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>zh-Hans</string>
+    </test>
+    <test name="family">
+      <string>sans-serif</string>
+    </test>
+    <edit name="family" mode="append" binding="strong">
+      <string>Roboto</string>
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>zh-Hans</string>
+    </test>
+    <test name="family">
+      <string>serif</string>
+    </test>
+    <edit name="family" mode="append" binding="strong">
+      <string>Noto Serif CJK SC</string>
+    </edit>
+  </match>
+  <!-- "lang=zh-Hant" or "lang=zh-Hant-*" -->
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>zh-Hant</string>
+    </test>
+    <edit name="family" mode="append" binding="strong">
+      <string>Roboto</string>
+      <string>Noto Sans CJK TC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>zh-Hant</string>
+    </test>
+    <test name="family">
+      <string>sans-serif</string>
+    </test>
+    <edit name="family" mode="append" binding="strong">
+      <string>Roboto</string>
+      <string>Noto Sans CJK TC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>zh-Hant</string>
+    </test>
+    <test name="family">
+      <string>serif</string>
+    </test>
+    <edit name="family" mode="append" binding="strong">
+      <string>Noto Serif CJK TC</string>
+    </edit>
+  </match>
   <!-- 默认无衬线字体 -->
   <!-- Default sans-serif font -->
   <match target="pattern">
