--- a/fontconfig/.config/fontconfig/conf.d/53-language-noto-cjk.conf
+++ b/fontconfig/.config/fontconfig/conf.d/53-language-noto-cjk.conf
@@ -148,6 +148,42 @@
     </edit>
   </match>
 
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-hant</string>
+    </test>
+    <test name="family">
+      <string>Noto Sans CJK SC</string>
+    </test>
+    <edit name="family" binding="strong">
+      <string>Noto Sans CJK TC</string>
+    </edit>
+  </match>
+
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-hant</string>
+    </test>
+    <test name="family">
+      <string>Noto Serif CJK SC</string>
+    </test>
+    <edit name="family" binding="strong">
+      <string>Noto Serif CJK TC</string>
+    </edit>
+  </match>
+
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-hant</string>
+    </test>
+    <test name="family">
+      <string>Noto Sans Mono CJK SC</string>
+    </test>
+    <edit name="family" binding="strong">
+      <string>Noto Sans Mono CJK TC</string>
+    </edit>
+  </match>
+
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
 <!-- kate: space-indent on; indent-width 2; -->
