--- a/envvars/.config/environment.d/01-xdg-fix.conf
+++ b/envvars/.config/environment.d/01-xdg-fix.conf
@@ -17,22 +17,31 @@ _JAVA_OPTIONS="-Djava.util.prefs.userRoot=$XDG_CONFIG_HOME/java"
 LESSHISTFILE="$XDG_CACHE_HOME"/less/history
 # GNU Parallel
 PARALLEL_HOME="$XDG_CONFIG_HOME"/parallel
+# .ipfs for IPFS
+IPFS_PATH=$XDG_DATA_HOME/ipfs
 # ipython
 IPYTHONDIR=$XDG_CONFIG_HOME/ipython
 # Jupyter
 # https://wiki.archlinux.org/index.php/Jupyter
 JUPYTER_CONFIG_DIR=$XDG_CONFIG_HOME/jupyter
 JUPYTERLAB_DIR=$XDG_DATA_HOME/jupyter/lab
+# .m2 for Leiningen
+LEIN_HOME=$XDG_DATA_HOME/lein
 # python
 PYTHONSTARTUP=$XDG_CONFIG_HOME/python/rc.py
 # Python egg
 PYTHON_EGG_CACHE="$XDG_CACHE_HOME"/python-eggs
 # Pylint
 PYLINTHOME="$XDG_CACHE_HOME"/pylint
+# wakatime
+WAKATIME_HOME="$XDG_CONFIG_HOME"/wakatime
 # Wget
 WGETRC="$XDG_CONFIG_HOME"/wget/config.ini
 # NPM
 NPM_CONFIG_USERCONFIG="$XDG_CONFIG_HOME"/npm/npmrc
+# .octave_hist and .octave_packages
+OCTAVE_HISTFILE="$XDG_CACHE_HOME"/octave-hsts
+OCTAVE_SITE_INITFILE="$XDG_CONFIG_HOME"/octave/octaverc
 # Ripgrep
 RIPGREP_CONFIG_PATH="$XDG_CONFIG_HOME"/ripgreprc
 # Rustup (Rust)
