--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -38,6 +38,10 @@ require-secmem
 with-fingerprint
 with-subkey-fingerprint
 
+# Show policy url notation
+list-options show-policy-url show-user-notations show-sig-expire
+list-options show-uid-validity
+
 # https://www.kernel.org/doc/html/v5.15/process/maintainer-pgp-guide.html#web-of-trust-wot-vs-trust-on-first-use-tofu
 # But I use pgp, conflict detect algorithm is not necessary and annoying
 trust-model pgp
