fontconfig: remove useless rules

--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -60,6 +60,15 @@
       <string>ss10 off</string> <!-- disable bad ligature -->
     </edit>
   </match>
+  <match target="scan">
+    <test name="family" qual="any">
+      <string>Monaco</string>
+    </test>
+    <edit name="fontfeatures" mode="append">
+      <string>liga off</string>
+      <string>dlig off</string>
+    </edit>
+  </match>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
 <!-- kate: space-indent on; indent-width 2; -->
