gpg: no greeting

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -1,5 +1,6 @@
 ###+++--- GPGConf ---+++###
 utf8-strings
+no-greeting
 default-key E35C89E45867AE35
 
 # https://wiki.archlinux.org/title/GnuPG#Different_algorithm
@@ -53,3 +54,4 @@ keyserver hkps://keys.gnupg.net
 #keyserver hkps://keys.openpgp.org
 #keyserver hkps://keyserver.ubuntu.com
 #keyserver hkps://pgp.mit.edu
+#keyserver hkps://pgp.surfnet.nl
