env,firefox: tweak hardware acceleration

--- a/envvars/.config/environment.d/50-hardware-acceleration.conf
+++ b/envvars/.config/environment.d/50-hardware-acceleration.conf
@@ -1,8 +1,12 @@
 ## Nvidia - vulkan is not working and can not initialize
 ## Check if you have vulkan-intel installed, it may prevent Nvidia's vulkan driver from being detected.
 #VK_ICD_FILENAMES=/usr/share/vulkan/icd.d/nvidia_icd.json
-#LIBVA_DRIVER_NAME=vdpau
+#LIBVA_DRIVER_NAME=nvidia
 
-LIBVA_DRIVER_NAME=i965
+LIBVA_DRIVER_NAME=iHD
 LIBVA_DRIVERS_PATH=/usr/lib/dri/
 VDPAU_DRIVER=nvidia
+
+# Enbale for GStreamer
+# https://wiki.archlinux.org/title/GStreamer#Hardware_video_acceleration
+GST_VAAPI_ALL_DRIVERS=1
