gpg: add sig-policy-url to https://pgp.coelacanthus.moe/policy-signed.txt

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -28,6 +28,8 @@ keyid-format 0xlong
 # Ask trust level during signing
 ask-cert-level
 
+sig-policy-url https://pgp.coelacanthus.moe/policy-signed.txt
+
 # This make GPG run only in a secure memory environment.
 # GPG will alert you when it is in an “insecure” environment.
 # Usually when running in a not-lockable memory or a flash
@@ -55,3 +57,21 @@ keyserver hkps://keys.gnupg.net
 #keyserver hkps://keyserver.ubuntu.com
 #keyserver hkps://pgp.mit.edu
 #keyserver hkps://pgp.surfnet.nl
+
+# Use this program to display photo user IDs
+#
+# %i is expanded to a temporary file that contains the photo.
+# %I is the same as %i, but the file isn't deleted afterwards by GnuPG.
+# %k is expanded to the key ID of the key.
+# %K is expanded to the long OpenPGP key ID of the key.
+# %t is expanded to the extension of the image (e.g. "jpg").
+# %T is expanded to the MIME type of the image (e.g. "image/jpeg").
+# %f is expanded to the fingerprint of the key.
+# %% is %, of course.
+#
+# If %i or %I are not present, then the photo is supplied to the
+# viewer on standard input.  If your platform supports it, standard
+# input is the best way to do this as it avoids the time and effort in
+# generating and then cleaning up a secure temp file.
+#
+photo-viewer "feh --title 'KeyID 0x%k' %i"
