gpg: disable sig-policy-url temp

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -28,7 +28,7 @@ keyid-format 0xlong
 # Ask trust level during signing
 ask-cert-level
 
-sig-policy-url https://pgp.coelacanthus.moe/policy-signed.txt
+#sig-policy-url https://pgp.coelacanthus.moe/policy-signed.txt
 
 # This make GPG run only in a secure memory environment.
 # GPG will alert you when it is in an “insecure” environment.
