git: add some instead

--- a/git/.config/git/instead.config
+++ b/git/.config/git/instead.config
@@ -20,5 +20,18 @@
     pushInsteadOf = "https://bitbucket.org/"
     pushInsteadOf = "git://bitbucket.org/"
 
+[url "git@gitlab.com:"]
+    pushInsteadOf = "https://gitlab.com/"
+
+[url "git@salsa.debian.org:"]
+    pushInsteadOf = "https://salsa.debian.org/"
+
+[url "git@invent.kde.org:"]
+    pushInsteadOf = "https://invent.kde.org/"
+
+[url "git@gitlab.archlinux.org:"]
+    pushInsteadOf = "https://gitlab.archlinux.org/"
+
+
 # vim: set ft=gitconfig et:
 # kate: space-indent on; indent-width 4; syntax ini;
