--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -33,6 +33,8 @@ Match all
     HostKeyAlgorithms ssh-ed25519,ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com,rsa-sha2-256,rsa-sha2-256-cert-v01@openssh.com,rsa-sha2-512,rsa-sha2-512-cert-v01@openssh.com
     # Disable SSH Protocol Version 1 for security reason
     Protocol 2
+    # Pass Environment variable to server
+    SendEnv COLORTERM
 
 # https://wiki.archlinux.org/title/GnuPG#Configure_pinentry_to_use_the_correct_TTY
 Match host * exec "gpg-connect-agent UPDATESTARTUPTTY /bye"
