gpg(keyserver): add hkps://pgp.gnd.pw

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -96,6 +96,7 @@ keyserver hkps://keys.gnupg.net
 #keyserver hkps://keyserver.ubuntu.com
 #keyserver hkps://pgp.mit.edu
 #keyserver hkps://pgp.surfnet.nl
+#keyserver hkps://pgp.gnd.pw
 
 
 #--------------------------------------
