editorconfig: add yaml config

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -128,6 +128,8 @@ s2k-digest-algo SHA512
 # List of default ciphers when creating new keys
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
 
+# Uncomment if you use GnuPG >= 2.3.0
+#force-aead
 
 #--------------------------------------
 # Security Options
@@ -275,3 +277,12 @@ photo-viewer "feh --title 'KeyID 0x%k' %i"
 #sig-policy-url https://pgp.coelacanthus.moe/policy-signed.txt
 
 utf8-strings
+
+# If you do not use the Latin-1 (ISO-8859-1) charset, you should tell
+# GnuPG which is the native character set.  Please check the man page
+# for supported character sets.  This character set is only used for
+# metadata and not for the actual message which does not undergo any
+# translation.  Note that future version of GnuPG will change to UTF-8
+# as default character set.  In most cases this option is not required
+# as GnuPG is able to figure out the correct charset at runtime.
+charset utf-8
