--- a/vim/.editorconfig
+++ b/vim/.editorconfig
@@ -18,3 +18,9 @@ indent_style = tab
 
 [*.{md,markdown}]
 trim_trailing_whitespace = false
+
+[{*.yml,*.yaml}]
+indent_size = 2
+
+[{COMMIT_EDITMSG,*.diff,*.patch}]
+trim_trailing_whitespace = false
