weechat: add #dn42@hackint

--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -210,3 +210,47 @@ libera.notify
 libera.split_msg_max_length
 libera.charset_message
 libera.default_chantypes
+hackint.addresses = "irc.hackint.org/6697"
+hackint.proxy
+hackint.ipv6 = on
+hackint.ssl = on
+hackint.ssl_cert
+hackint.ssl_password
+hackint.ssl_priorities
+hackint.ssl_dhkey_size
+hackint.ssl_fingerprint
+hackint.ssl_verify
+hackint.password
+hackint.capabilities
+hackint.sasl_mechanism = plain
+hackint.sasl_username = "CoelacanthusHex"
+hackint.sasl_password = "${sec.data.hackint_password}"
+hackint.sasl_key
+hackint.sasl_timeout
+hackint.sasl_fail
+hackint.autoconnect = on
+hackint.autoreconnect
+hackint.autoreconnect_delay
+hackint.nicks = "CoelacanthusHex,Coelacanthus,C10s,C10sHex"
+hackint.nicks_alternate
+hackint.username
+hackint.realname
+hackint.local_hostname
+hackint.usermode
+hackint.command
+hackint.command_delay
+hackint.autojoin = "#dn42"
+hackint.autorejoin
+hackint.autorejoin_delay
+hackint.connection_timeout
+hackint.anti_flood_prio_high
+hackint.anti_flood_prio_low
+hackint.away_check
+hackint.away_check_max_nicks
+hackint.msg_kick
+hackint.msg_part
+hackint.msg_quit
+hackint.notify
+hackint.split_msg_max_length
+hackint.charset_message
+hackint.default_chantypes
