--- a/weechat/.weechat/plugins.conf
+++ b/weechat/.weechat/plugins.conf
@@ -10,6 +10,18 @@
 #
 
 [var]
+perl.multiline.char = "↩"
+perl.multiline.hide_magic_nl = "on"
+perl.multiline.ipl = "on"
+perl.multiline.lead_linebreak = "on"
+perl.multiline.magic = "‼"
+perl.multiline.magic_enter_time = "1000"
+perl.multiline.magic_paste_only = "off"
+perl.multiline.modify_keys = "on"
+perl.multiline.paste_lock = "1"
+perl.multiline.send_empty = "on"
+perl.multiline.tab = "──▶▏"
+perl.multiline.weechat_paste_fix = "on"
 python.bot2human.bot_nicks = "tg2arch tg2offtopic fzh-tg tg-fzh gentoocnbot gentoozhbot akarin3 susecn_bot StaphBot offbot fedora_zh_bridge xmppbot fcitx_tg"
 python.bot2human.nick_content_re.0 = "\[(?:\x03[0-9,]+)?(?P<nick>[^:]+?)\x0f?\] (?P<text>.*)"
 python.bot2human.nick_content_re.1 = "(?:\x03[0-9,]+)?\[(?P<nick>[^:]+?)\]\x0f? (?P<text>.*)"
@@ -44,6 +56,18 @@ python.notify_send.transient = "on"
 python.notify_send.urgency = "normal"
 
 [desc]
+perl.multiline.char = "character(s) which should be displayed to indicate end of line"
+perl.multiline.hide_magic_nl = "whether the new line inserted by magic enter key will be hidden"
+perl.multiline.ipl = "this setting controls override of ctrl-M (enter key) by script. Turn it off if you don't want multiline.pl to set and re-set the key binding."
+perl.multiline.lead_linebreak = "if turned on, multi-line messages always start on a new line"
+perl.multiline.magic = "indicator displayed when message will be sent soon"
+perl.multiline.magic_enter_time = "delay after pressing enter before sending automatically (in ms), or 0 to disable"
+perl.multiline.magic_paste_only = "only use multi-line messages for multi-line pastes (multi-line on enter is disabled by this)"
+perl.multiline.modify_keys = "if turned on, cursor keys are modified so that they respect line boundaries instead of treating the whole multi-line message as a single line"
+perl.multiline.paste_lock = "time-out to detect pastes (disable the weechat built-in paste detection if you want to use this)"
+perl.multiline.send_empty = "set to on to automatically disregard enter key on empty line"
+perl.multiline.tab = "character(s) which should be displayed instead of Tab key character"
+perl.multiline.weechat_paste_fix = "disable ctrl-J binding when paste is detected to stop silly weechat sending out pastes without allowing to edit them"
 python.notify_send.desktop_entry = "Name of the desktop entry for WeeChat. Default: weechat."
 python.notify_send.ellipsis = "Ellipsis to be used for notifications that are too long. Default: [..]."
 python.notify_send.escape_html = "Escapes the '<', '>', and '&' characters in notification messages. Default: on."
