--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,27 @@
-*.sh        text eol=lf
-*.bat       text eol=crlf
-*.cmd       text eol=crlf
-*.ps1       text eol=crlf
-*.png       -text
-*.jpg       -text
+*.bash     text eol=lf
+*.fish     text eol=lf
+*.sh       text eol=lf
+*.zsh      text eol=lf
+# These are explicitly windows files and should use crlf
+*.bat      text eol=crlf
+*.cmd      text eol=crlf
+*.ps1      text eol=crlf
+
+*.bibtex   text diff=bibtex
+*.md       text diff=markdown
+*.mdx      text diff=markdown
+*.markdown text diff=markdown
+*.tex      text diff=tex
+
+# Perl
+*.pl       text diff=perl
+*.pm       text diff=perl
+
+# Python
+*.pxd      text diff=python
+*.py       text diff=python
+*.py3      text diff=python
+*.pyw      text diff=python
+*.pyx      text diff=python
+*.pyz      text diff=python
+*.pyi      text diff=python
