--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -20,8 +20,7 @@
     renamelimit = 1024
     # If set to "false", rename detection is disabled. If set to "true", basic rename detection is enabled. If set to "copies" or "copy", Git will detect copies, as well.
     # https://stackoverflow.com/questions/1043388/record-file-copy-operation-with-git
-    # But it seems not work, just set to default until it works.
-    #renames = copies
+    renames = copies
     # https://blog.github.com/2018-04-05-git-217-released/
     # https://git-scm.com/docs/git-diff#Documentation/git-diff.txt---color-movedltmodegt
     colorMoved = default
