--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -52,6 +52,10 @@
 [merge]
     # Include summaries of merged commits in newly created merge commit messages
     log = true
+    tool = vimdiff
+
+[mergetool]
+    prompt = false
 
 [include]
     path = ~/.config/git/format.config
