fontconfig: add features for Sarasa

--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -48,6 +48,22 @@
   </match>
   <match target="scan">
     <test name="family" compare="contains" ignore-blanks="true">
+      <string>Sarasa</string>
+    </test>
+    <edit name="fontfeatures" mode="append">
+      <string>ss10 on</string> <!-- using SS10 variant shape -->
+      <string>zero on</string> <!-- slashed zero -->
+      <string>cv49 1</string> <!-- straight y -->
+      <string>cv52 8</string> <!-- better beta -->
+      <string>cv82 5</string> <!-- I like this star -->
+      <string>cv83 2</string> <!-- underline, not too high, not too low -->
+      <string>cv87 1</string> <!-- better curly braces -->
+      <string>cv95 2</string> <!-- better >= -->
+    </edit>
+  </match>
+  <!-- Fira Code -->
+  <match target="scan">
+    <test name="family" compare="contains" ignore-blanks="true">
       <string>Fira Code</string>
     </test>
     <edit name="fontfeatures" mode="append">
@@ -60,6 +76,7 @@
       <string>ss10 off</string> <!-- disable bad ligature -->
     </edit>
   </match>
+  <!-- Monaco -->
   <match target="scan">
     <test name="family" qual="any">
       <string>Monaco</string>
