fontconfig: update Iosevka font features

--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -44,6 +44,8 @@
       <string>cv83 2</string> <!-- underline, not too high, not too low -->
       <string>cv87 1</string> <!-- better curly braces -->
       <string>cv95 2</string> <!-- better >= -->
+      <string>cv99 1</string> <!-- round dot -->
+      <string>vxdd 1</string> <!-- round dot -->
     </edit>
   </match>
   <match target="scan">
@@ -59,6 +61,8 @@
       <string>cv83 2</string> <!-- underline, not too high, not too low -->
       <string>cv87 1</string> <!-- better curly braces -->
       <string>cv95 2</string> <!-- better >= -->
+      <string>cv99 1</string> <!-- round dot -->
+      <string>vxdd 1</string> <!-- round dot -->
     </edit>
   </match>
   <!-- Fira Code -->
