--- a/vim/.vim/dein.d/lazy.toml
+++ b/vim/.vim/dein.d/lazy.toml
@@ -182,5 +182,18 @@ on_ft = ['codeowners']
 repo = 'rbtnn/vim-vimscript_indentexpr'
 on_ft = ['vim']
 
+[[plugins]]
+repo = 'vim-perl/vim-perl'
+on_ft = ['perl']
+build = 'make clean carp dancer highlight-all-pragmas moose test-more try-tiny'
+
+[[plugins]]
+repo = 'benknoble/vim-racket'
+on_ft = ['racket', 'scribble', 'racket-info']
+
+[[plugins]]
+repo = 'inkarkat/vim-mark'
+on_cmd = 'Mark'
+
 # vim: set sw=4 ts=8 sts=4 et foldmethod=marker:
 # kate: space-indent on; indent-width 4; syntax toml;
