gpg: enable auto-key-retrieve

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -98,6 +98,8 @@ keyserver hkps://keys.gnupg.net
 #keyserver hkps://pgp.surfnet.nl
 #keyserver hkps://pgp.gnd.pw
 
+auto-key-retrieve
+
 
 #--------------------------------------
 # OpenPGP protocol specific options
