--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -14,6 +14,13 @@ Host github.com
     # http proxy
     #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
 
+Host codereview.qt-project.org
+    Port 29418
+    User coelacanthus
+    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
+    PubkeyAcceptedKeyTypes +ssh-rsa
+    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha1
+
 Match all
     ControlMaster auto
     ControlPath ~/.ssh/socket/%h-%p-%r
