vim,zsh: some update

--- a/vim/.vim/dein.d/lazy.toml
+++ b/vim/.vim/dein.d/lazy.toml
@@ -5,6 +5,10 @@
 repo = 'vim-denops/denops.vim'
 if = "executable('deno')"
 
+#[[plugins]]
+#repo = 'yegappan/lsp'
+#name = 'vim9lsp'
+
 [[plugins]]
 repo = 'prabirshrestha/vim-lsp'
 
