--- a/vim/.vim/dein.d/normal.toml
+++ b/vim/.vim/dein.d/normal.toml
@@ -132,5 +132,8 @@ hook_source = '''
 [[plugins]]
 repo = 'timonv/vim-cargo'
 
+[[plugins]]
+repo = 'machakann/vim-sandwich'
+
 # vim: set sw=4 ts=8 sts=4 et foldmethod=marker:
 # kate: space-indent on; indent-width 4; syntax toml;
