git: add sendmail config

--- a/git/.config/git/diff-specified.config
+++ b/git/.config/git/diff-specified.config
@@ -15,4 +15,4 @@
         cmd = difftastic "$LOCAL" "$REMOTE"
 
 # vim: set ft=gitconfig et:
-# kate: space-indent on; indent-width 4; syntax ini;
+# kate: space-indent on; indent-width 4; syntax toml;
