--- a/git/.config/git/format.config
+++ b/git/.config/git/format.config
@@ -37,6 +37,8 @@
     date = iso-local
 [format]
     pretty = fuller
+[pretty]
+    fixes = Fixes: %h (\"%s\")
 
 [delta]
     commit-style                  = bold yellow
@@ -80,4 +82,4 @@
     conflictstyle = zdiff3
 
 # vim: set ft=gitconfig et:
-# kate: space-indent on; indent-width 4; syntax ini;
+# kate: space-indent on; indent-width 4; syntax toml;
