--- a/git/.config/git/instead.config
+++ b/git/.config/git/instead.config
@@ -34,4 +34,4 @@
 
 
 # vim: set ft=gitconfig et:
-# kate: space-indent on; indent-width 4; syntax ini;
+# kate: space-indent on; indent-width 4; syntax toml;
