--- a/git/.config/git/proxy.config
+++ b/git/.config/git/proxy.config
@@ -5,4 +5,4 @@
     proxy = socks5://127.0.0.1:1089
 
 # vim: set ft=gitconfig et:
-# kate: space-indent on; indent-width 4; syntax ini;
+# kate: space-indent on; indent-width 4; syntax toml;
