--- a/git/.config/git/qt.config
+++ b/git/.config/git/qt.config
@@ -15,4 +15,4 @@ stat = true
     autoupdate = true
 
 # vim: set ft=gitconfig et:
-# kate: space-indent on; indent-width 4; syntax ini;
+# kate: space-indent on; indent-width 4; syntax toml;
