--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -27,6 +27,9 @@
     # https://blog.filippo.io/git-fixup-amending-an-older-commit/
     # We can use git revise instead
     fixup = "!f() { TARGET=$(git rev-parse \"$1\"); shift; git commit --fixup=$TARGET ${@} && GIT_EDITOR=true git rebase -i --autostash --autosquash $TARGET^; }; f"
+    
+    # Generate Linux kernel fix message
+    k-fix-msg = log -1 --abbrev=12 --pretty=fixes
 
 # vim: set ft=gitconfig et:
-# kate: space-indent on; indent-width 4; syntax ini;
+# kate: space-indent on; indent-width 4; syntax toml;
