--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -74,4 +74,4 @@
 [includeIf "gitdir:~/Data/workspace/project/qt/**"]
     path = ~/.config/git/qt.config
 
-# kate: space-indent on; indent-width 4; syntax ini;
+# kate: space-indent on; indent-width 4; syntax toml;
